--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,11 +25,13 @@
       <h2 class="govuk-heading-l">Prototype pages</h2>
 
 
-      <p><a href="psd-revised-flow/inner-home-page/home-02">Home</a></p>
+      <p><a href="psd-revised-flow/inner-home-page/home-03">Home</a></p>
 
       <p><a href="prism/prism-dashboard">Prism dashboard</a></p>
 
-      <p><a href="indexxx">Index with links</a></p>
+      <p><a href="psd-cases-area/all-cases-filters
+">All cases search and filters</a></p>
+
 
       <p><a href="psd-revised-flow/online-sales/type-of-business
 ">Business type</a></p>
@@ -47,6 +49,7 @@
  <p><a href="psd-revised-flow/product-page
 ">Product details</a></p>
 
+ <p><a href="indexxx">Index with links</a></p>
 
 
 
