--- a/app/views/layout-psd-menu_home.html
+++ b/app/views/layout-psd-menu_home.html
@@ -99,17 +99,18 @@
           </li>
 
           <li class="psd-header__navigation-item psd-header__navigation-item--active">
-            <a class="psd-header__link" href="../../../psd-revised-flow/inner-home-page/home-02">Home</a>
+            <a class="psd-header__link" href="../../../psd-revised-flow/inner-home-page/home-03">Home</a>
           </li>
           <li class="psd-header__navigation-item">
-            <a class="psd-header__link" href="#">Cases</a>
-          </li>
-          <li class="psd-header__navigation-item ">
-            <a class="psd-header__link" href="#">Businesses</a>
+            <a class="psd-header__link" href="../../../psd-cases-area/notifications/notifications-dashboard">Notifications</a>
           </li>
           <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="../../../psd-products-area/all-products.html">Products</a>
           </li>
+          <li class="psd-header__navigation-item ">
+            <a class="psd-header__link" href="#">Businesses</a>
+          </li>
+
             <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="../../../prism/prism-dashboard">Risk assessments</a>
           </li>
@@ -131,6 +132,7 @@
   <div class="govuk-width-container">
     <div class="govuk-footer__meta">
       <div class="govuk-footer__meta-item govuk-footer__meta-item--grow">
+         <p><a href="/prototype-admin/clear-data">Clear data</a></p>
         <div class="opss-footer__body">
           Email <a class="govuk-footer__link" href="mailto:opss.enquiries@beis.gov.uk?subject=Help%20requested%20on%20the%20Product%20Safety%20Database">opss.enquiries@beis.gov.uk</a> for help using this service.
         </div>
