--- a/app/views/psd-products-area/multiple-products/check-corrective-actions.html
+++ b/app/views/psd-products-area/multiple-products/check-corrective-actions.html
@@ -61,7 +61,7 @@
 
     </div>
 
-    <button type="submit" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Upload product records</button>
+    <button type="submit" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Create a case and upload product records</button>
 
 
     </div>
