--- a/app/views/psd-products-area/multiple-products/duplicate-products-v3.html
+++ b/app/views/psd-products-area/multiple-products/duplicate-products-v3.html
@@ -36,11 +36,22 @@ Is this the same product
             Product records with the same barcode already exist in the database.
           </div>
 
+          <br/>
+
+           <h3 class="govuk-heading-m">Select the product record you'd like to import.</h3>
+
+
+
           <div class="govuk-grid-row">
+
+
             <section class="govuk-grid-column-three-quarters opss-panels">
+
               <div class="opss-panels__single">
 
-                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Miss Dior edt vapo 120ml</h2>
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Miss Dior edt vapo 120ml <strong class="govuk-tag govuk-tag--yellow">
+          Existing PSD record
+        </strong></h2>
 
                 <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
                   <div class="govuk-summary-list__row">
@@ -79,13 +90,58 @@ Is this the same product
                   </summary>
                   <div class="govuk-details__text"><img src="../../public/images/miss-dior.jpg" class="opss-details-img" alt="Asda window cleaner"></div>
                 </details>
+              </div>
 
+              <div class="opss-panels__single" style="border-left: none;">
+
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Miss Dior edt vapo 120ml <strong class="govuk-tag govuk-tag--green">
+          Imported Excel record
+        </strong></h2>
+
+                <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      Not available
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Brand name</dt>
+                    <dd class="govuk-summary-list__value">Dior</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Product name </dt>
+                    <dd class="govuk-summary-list__value">Miss Dior edt vapo 120ml</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Barcode </dt>
+                    <dd id="barNumber" class="govuk-summary-list__value">664996-7676323</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Counterfeit </dt>
+                    <dd class="govuk-summary-list__value">
+                      No <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">This product record is about a genuine product</span>
+                    </dd>
+                  </div>
+                </dl>
+
+                <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
+                  <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                      Product image
+                    </span>
+                  </summary>
+                  <div class="govuk-details__text"><img src="../../public/images/no-product-image.jpg" class="opss-details-img" alt="Asda window cleaner"></div>
+                </details>
               </div>
             </section>
 
           </div>
 
-          <div class="govuk-grid-row">
+
+               <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
 
               <div class="govuk-form-group">
@@ -94,14 +150,14 @@ Is this the same product
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="correct" name="correct" type="radio" value="yes">
                   <label class="govuk-label govuk-radios__label" for="correct">
-                    Use this product record instead
+                    Use existing PSD record
                   </label>
                 </div>
 
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="correct-2" name="correct" type="radio" value="no">
                   <label class="govuk-label govuk-radios__label" for="correct-2">
-                    Use the product record from my Excel file
+                    Use imported Excel record
                   </label>
                 </div>
 
@@ -110,13 +166,17 @@ Is this the same product
             </div>
           </div>
 
-          <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-width-three-quarters">
+              <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible govuk-!-width-three-quarters">
+
+
 
            <div class="govuk-grid-row">
             <section class="govuk-grid-column-three-quarters opss-panels">
               <div class="opss-panels__single">
 
-                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Classic edt vapo 90ml</h2>
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Classic edt vapo 90ml <strong class="govuk-tag govuk-tag--yellow">
+          Existing PSD record
+        </strong></h2>
 
                 <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
                   <div class="govuk-summary-list__row">
@@ -153,12 +213,57 @@ Is this the same product
                       Product image
                     </span>
                   </summary>
-                  <div class="govuk-details__text"><img src="../../public/images/miss-dior.jpg" class="opss-details-img" alt="Asda window cleaner"></div>
+                  <div class="govuk-details__text"><img src="../../public/images/no-product-image.jpg" class="opss-details-img" alt="Asda window cleaner"></div>
+                </details>
+
+              </div>
+
+              <div class="opss-panels__single" style="border-left: none;">
+
+                <h2 class="govuk-heading-m govuk-!-margin-bottom-3">Classic edt vapo 90ml <strong class="govuk-tag govuk-tag--green">
+          Imported Excel record
+        </strong></h2>
+
+                <dl class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-6">
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                      <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                      Not avialble
+                    </dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Brand name</dt>
+                    <dd class="govuk-summary-list__value">Yonzon</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Product name </dt>
+                    <dd class="govuk-summary-list__value">Miss Dior edt vapo 120ml</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Barcode </dt>
+                    <dd id="barNumber" class="govuk-summary-list__value">664996-7676389</dd>
+                  </div>
+                  <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Counterfeit </dt>
+                    <dd class="govuk-summary-list__value">
+                      No <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">This product record is about a genuine product</span>
+                    </dd>
+                  </div>
+                </dl>
+
+                <details class="govuk-details govuk-!-margin-bottom-3" data-module="govuk-details">
+                  <summary class="govuk-details__summary">
+                    <span class="govuk-details__summary-text">
+                      Product image
+                    </span>
+                  </summary>
+                  <div class="govuk-details__text"><img src="../../public/images/no-product-image.jpg" class="opss-details-img" alt="Asda window cleaner"></div>
                 </details>
 
               </div>
             </section>
-
           </div>
 
           <div class="govuk-grid-row">
@@ -170,14 +275,14 @@ Is this the same product
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="correct" name="correct" type="radio" value="yes">
                   <label class="govuk-label govuk-radios__label" for="correct">
-                    Use this product record instead
+                    Use existing PSD record
                   </label>
                 </div>
 
                 <div class="govuk-radios__item">
                   <input class="govuk-radios__input" id="correct-2" name="correct" type="radio" value="no">
                   <label class="govuk-label govuk-radios__label" for="correct-2">
-                    Use the product record from my Excel file
+                    Use imported Excel record
                   </label>
                 </div>
 
@@ -185,6 +290,7 @@ Is this the same product
 
             </div>
           </div>
+
 
 
 
