--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -67,7 +67,7 @@ Product psd-304
 
         <div class="govuk-button-group">
 
-                <a class="govuk-link" href="#"> Create a product case</a>
+                <a class="govuk-link" href="../../psd-cases-area/notifications/task-list"> Create a product safety notification</a>
 
  <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Start a new risk assessment
@@ -276,7 +276,7 @@ protocol and contain components that can potentially become defective.
                 <div class="govuk-accordion__section-header">
                     <h2 class="govuk-accordion__section-heading">
                         <span class="govuk-accordion__section-button" id="accordion-default-heading-3">
-                            <span class="govuk-visually-hidden">Related</span> Cases <span
+                            <span class="govuk-visually-hidden">Related</span> Product safety notifications <span
                                 class="govuk-!-font-weight-regular govuk-!-font-size-19">(3)</span>
                         </span>
                     </h2>
