--- a/app/views/psd-cases-area/notifications/edit-submitted.html
+++ b/app/views/psd-cases-area/notifications/edit-submitted.html
@@ -196,9 +196,9 @@
 
           <br/>
 
-          <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
+          <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
   Add new business
-</button>
+</a>
         </dl>
 
         <h2 class="govuk-heading-m">Evidence</h2>
@@ -257,9 +257,9 @@
 
           <br/>
 
-          <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
+          <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
   Add new evidence
-</button>
+</a>
         </dl>
 
          <h2 class="govuk-heading-m">Corrective actions</h2>
@@ -391,9 +391,9 @@
 
           <br/>
 
-          <button class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
+          <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button" style="margin-bottom:0;">
   Add new corrective action
-</button>
+</a>
 
         </dl>
 
