--- a/app/views/psd-cases-area/notifications/risk-level.html
+++ b/app/views/psd-cases-area/notifications/risk-level.html
@@ -21,7 +21,7 @@
 </div>
 
     <span class="govuk-caption-l">{{title}}</span>
-    <h1 class="govuk-heading-l">Determine product risk level</h1>
+    <h1 class="govuk-heading-l">Determine overall product risk level</h1>
     <p class="govuk-body">The case risk level will usually match the risk assessment.</p>
     <p class="govuk-body">It can differ from risk assessments if necessary - such as when there are conflicting assessments, or where the assessment was provided by a third party.</p>
 
