--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -29,7 +29,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
   </div>
 {% endif %}
 
-  <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Assessment incomplete</h2>
+  <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Product safety notification incomplete</h2>
 
   {% if checked("section-4-complete", "yes") %}
   <p class="govuk-body">You have completed 4 of 6 sections.</p>
