UR changes to notifications prototype

--- a/app/views/psd-cases-area/notifications/add-another-business.html
+++ b/app/views/psd-cases-area/notifications/add-another-business.html
@@ -18,14 +18,13 @@
 <div class="govuk-grid-row">
   <form class="form govuk-!-margin-bottom-6" action="task-list" method="post">
   <div class="govuk-grid-column-two-thirds-from-desktop">
-</div>
 
     <span class="govuk-caption-l">{{title}}</span>
     <h1 class="govuk-heading-l">You have added 1 business</h1>
 
-    <dl class="govuk-summary-list hmrc-list-with-actions hmrc-list-with-actions--short">
+    <dl class="govuk-summary-list">
     <div class="govuk-summary-list__row">
-      <dt class="govuk-summary-list__key govuk-!-font-weight-regular hmrc-summary-list__key">
+      <dt class="govuk-summary-list__key govuk-!-font-weight-regular">
         ABC Limited
       </dt>
       <dd class="govuk-summary-list__actions hmrc-summary-list__actions">
@@ -73,7 +72,7 @@
   </a>
 
 </div>
-
+</div>
  <input class="govuk-checkboxes__input" id="section-3-complete" name="section-3-complete" type="checkbox" value="yes" { checked('section-3-complete','yes') }} checked>
 
 </form>
