--- a/app/views/psd-cases-area/notifications/check-submit.html
+++ b/app/views/psd-cases-area/notifications/check-submit.html
@@ -77,10 +77,23 @@
           </div>
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
+              Notification summary
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Not provided
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">Change
+
+              </a>
+            </dd>
+          </div>
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
               Why are you creating the notification?
             </dt>
             <dd class="govuk-summary-list__value">
-              A product of concern
+              A product is unsafe or non-compliant
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">Change
@@ -424,7 +437,7 @@
 
 <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Submit the notification
+    Submit notification
   </button>
 
   <a href="task-list" class="govuk-button govuk-button--secondary" data-module="govuk-button">
