--- a/app/views/psd-cases-area/notifications/confirmation.html
+++ b/app/views/psd-cases-area/notifications/confirmation.html
@@ -27,7 +27,7 @@
 
         <ul class="govuk-list">
 
-          <li><a href="edit-submitted" class="govuk-link">View or edit</a> the submitted product notification</li>
+          <li><a href="edit-submitted" class="govuk-link">View or edit</a> the submitted product safety notification</li>
 
                <li><a href="notifications-dashboard" class="govuk-link">View or edit </a> all your draft and submitted notifications</li>
                </ul>
