--- a/app/views/psd-cases-area/notifications/edit-submitted.html
+++ b/app/views/psd-cases-area/notifications/edit-submitted.html
@@ -69,12 +69,28 @@
               </a>
             </dd>
           </div>
+
+          <div class="govuk-summary-list__row">
+            <dt class="govuk-summary-list__key">
+              Notification summary
+            </dt>
+            <dd class="govuk-summary-list__value">
+             Not provided
+            </dd>
+            <dd class="govuk-summary-list__actions">
+              <a class="govuk-link" href="#">Change
+
+              </a>
+            </dd>
+          </div>
+
+
           <div class="govuk-summary-list__row">
             <dt class="govuk-summary-list__key">
               Why are you creating the notification?
             </dt>
             <dd class="govuk-summary-list__value">
-              A product of concern
+              A product is unsafe or non-compliant
             </dd>
             <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="#">
