--- a/app/views/psd-cases-area/notifications/image-upload.html
+++ b/app/views/psd-cases-area/notifications/image-upload.html
@@ -72,7 +72,7 @@
 
 <br/>
       <button class="govuk-button" data-module="govuk-button">
-  Finish uploading images
+  Save and finish image upload
 </button>
 
 
