--- a/app/views/psd-cases-area/notifications/product-identification.html
+++ b/app/views/psd-cases-area/notifications/product-identification.html
@@ -97,7 +97,7 @@
 
  <div class="govuk-button-group govuk-!-margin-top-6">
   <button class="govuk-button" data-module="govuk-button">
-    Save and continue
+    Save and complete tasks in this section
   </button>
 
   <a href="#" class="govuk-button govuk-button--secondary" data-module="govuk-button">
