--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -121,6 +121,14 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
            <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
         </li>
 
+        <li class="app-task-list__item">
+          <span class="app-task-list__task-name">
+           <a href="product-identification">Add product identification details</a>
+         </span>
+         <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
+       </li>
+
+
         {% else %}
 
          <li class="app-task-list__item">
@@ -222,7 +230,6 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
          </span>
          <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
        </li>
-
 
 </ul>
 
