--- a/app/views/psd-cases-area/notifications/product-search-enhanced-v2.html
+++ b/app/views/psd-cases-area/notifications/product-search-enhanced-v2.html
@@ -40,13 +40,13 @@
           <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                <li class="opss-left-nav__active">
-                  <a class="govuk-link govuk-link--no-visited-state" aria-current="page" href="/psd-products-area/all-products.html">All products</a>
+                  <a class="govuk-link govuk-link--no-visited-state" aria-current="page" href="#">All products</a>
                 </li>
                 <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/team-products.html">Team products</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="#">Team products</a>
                 </li>
                 <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="/psd-products-area/your-products-sorting.html">Your products</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="#">Your products</a>
                 </li>
             </ul>
           </nav>
