Add another product to notifications prototype

--- a/app/views/layout-psd-menu_home.html
+++ b/app/views/layout-psd-menu_home.html
@@ -98,7 +98,7 @@
             <a class="psd-header__link" href="#">Sign out</a>
           </li>
 
-          <li class="psd-header__navigation-item psd-header__navigation-item--active">
+          <li class="psd-header__navigation-item">
             <a class="psd-header__link" href="../../../psd-revised-flow/inner-home-page/home-03">Home</a>
           </li>
           <li class="psd-header__navigation-item">
