--- a/app/views/psd-cases-area/notifications/edit-submitted.html
+++ b/app/views/psd-cases-area/notifications/edit-submitted.html
@@ -22,13 +22,13 @@
       <h1 class="govuk-heading-l">
         All in All+ Car Seat - lack of protection from the buckle <br/>
           <strong class="govuk-tag govuk-tag--green">Submitted</strong>
-        </strong>
       </h1>
 
        <div class="govuk-form-group ">
     <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
     <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
+    <a href="#">Add another product</a>
   </div>
   <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
@@ -64,7 +64,7 @@
              All in All+ Car Seat - lack of protection from the buckle
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
 
               </a>
             </dd>
@@ -93,7 +93,7 @@
               A product is unsafe or non-compliant
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
 
               </a>
             </dd>
@@ -106,7 +106,7 @@
               Product is unsafe
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
 
               </a>
             </dd>
@@ -119,7 +119,7 @@
               No
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
 
               </a>
             </dd>
@@ -132,7 +132,7 @@
               Not provided
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
                 Change<span class="govuk-visually-hidden"> address</span>
               </a>
             </dd>
@@ -145,7 +145,7 @@
               Not provided
             </dd>
             <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="#">
+              <a class="govuk-link" href="#">Change
                 Change<span class="govuk-visually-hidden"> contact details</span>
               </a>
             </dd>
