--- a/app/views/psd-cases-area/notifications/notifications-dashboard.html
+++ b/app/views/psd-cases-area/notifications/notifications-dashboard.html
@@ -18,13 +18,13 @@ Home
           <nav aria-label="Secondary">
             <ul class="govuk-list opss-left-nav">
                <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="#">All assessments - Search</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="#">All notifications - Search</a>
                 </li>
                 <li>
-                  <a class="govuk-link govuk-link--no-visited-state" href="#">Team assessments</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="#">Team notificationss</a>
                 </li>
                 <li class="opss-left-nav__active">
-                  <a class="govuk-link govuk-link--no-visited-state" href="#"aria-current="page">Your assessments</a>
+                  <a class="govuk-link govuk-link--no-visited-state" href="#"aria-current="page">Your notifications</a>
                 </li>
             </ul>
           </nav>
