--- a/app/views/psd-cases-area/notifications/task-list.html
+++ b/app/views/psd-cases-area/notifications/task-list.html
@@ -26,6 +26,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
    <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
     <p class="govuk-body-l">All in All+ Car Seat, Dragon Kingdom CT4262</p>
+    <a href="#">Add another product</a>
   </div>
 {% endif %}
 
