add another product to draft

--- a/app/views/psd-cases-area/notifications/edit-draft.html
+++ b/app/views/psd-cases-area/notifications/edit-draft.html
@@ -22,12 +22,11 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
     Create a product safety notification
   </h1>
 
-   {% if checked("section-1-complete", "yes") %}
    <div class="govuk-inset-text">
   <p class="govuk-body govuk-!-margin-bottom-0">For</p>
     <p class="govuk-body-l">ABC Room/Space Heater</p>
+    <a href="#">Add another product</a>
   </div>
-{% endif %}
 
   <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Product safety notification incomplete</h2>
 
